[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/TileMaps/3x3TileMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/progression/Level.gd" type="Script" id=2]

[node name="Level1" type="Node2D"]
script = ExtResource( 2 )

[node name="3x3TileMap" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( -1966093, 0, 1, -1966092, 0, 196610, -1966091, 0, 196610, -1966090, 0, 196610, -1966089, 0, 196610, -1966088, 0, 196610, -1966087, 0, 196610, -1966086, 0, 196610, -1966085, 0, 196610, -1966084, 0, 196610, -1966083, 0, 196610, -1966082, 0, 196610, -1966081, 0, 196611, -1900558, 0, 196609, -1900557, 0, 131075, -1966080, 0, 196609, -1966079, 0, 196610, -1966078, 0, 196610, -1966077, 0, 196610, -1966076, 0, 196610, -1966075, 0, 196611, -1835023, 0, 196608, -1900538, 0, 196609, -1900537, 0, 196610, -1900536, 0, 196610, -1900535, 0, 196611, -1769488, 0, 196608, -1834998, 0, 196609, -1834997, 0, 196610, -1834996, 0, 196610, -1834995, 0, 196610, -1834994, 0, 196611, -1703953, 0, 196608, -1769457, 0, 196609, -1769456, 0, 196610, -1769455, 0, 196611, -1638418, 0, 196608, -1703918, 0, 196609, -1703917, 0, 196611, -1572883, 0, 196608, -1638380, 0, 196608, -1507348, 0, 0, -1507339, 0, 196609, -1507338, 0, 196610, -1507337, 0, 196610, -1507336, 0, 196610, -1507335, 0, 196610, -1507334, 0, 196610, -1507333, 0, 196610, -1507332, 0, 196610, -1507331, 0, 196610, -1507330, 0, 196610, -1507329, 0, 196610, -1572864, 0, 196610, -1572863, 0, 196610, -1572862, 0, 196611, -1572843, 0, 0, -1441812, 0, 131072, -1441805, 0, 196609, -1441804, 0, 196611, -1507325, 0, 196609, -1507324, 0, 196610, -1507323, 0, 196611, -1507307, 0, 65536, -1376277, 0, 0, -1376271, 0, 196609, -1376270, 0, 196611, -1441786, 0, 196609, -1441785, 0, 196610, -1441784, 0, 196611, -1441771, 0, 131073, -1441770, 0, 196611, -1310742, 0, 196609, -1310741, 0, 131075, -1310737, 0, 196609, -1310736, 0, 196611, -1376247, 0, 196609, -1376246, 0, 196610, -1376245, 0, 196611, -1376233, 0, 0, -1245207, 0, 0, -1245202, 0, 196608, -1310708, 0, 196609, -1310707, 0, 196611, -1310697, 0, 65536, -1179671, 0, 131072, -1179667, 0, 0, -1245170, 0, 196608, -1245161, 0, 131072, -1114136, 0, 0, -1114131, 0, 131072, -1179633, 0, 196609, -1179632, 0, 196611, -1179624, 0, 0, -1048600, 0, 131072, -1048596, 0, 0, -1114095, 0, 0, -1114088, 0, 65536, -983065, 0, 0, -983060, 0, 65536, -1048559, 0, 131072, -1048552, 0, 65536, -917529, 0, 65536, -917524, 0, 131072, -983022, 0, 0, -983016, 0, 65536, -851993, 0, 131072, -851989, 0, 0, -917486, 0, 131072, -917480, 0, 65536, -786458, 0, 196608, -786453, 0, 65536, -851949, 0, 0, -851944, 0, 65536, -720923, 0, 0, -720917, 0, 65536, -786413, 0, 131072, -786408, 0, 65536, -655387, 0, 65536, -655381, 0, 65536, -655362, 0, 196609, -655361, 0, 196611, -720876, 0, 0, -720872, 0, 65536, -589851, 0, 131072, -589845, 0, 65536, -589828, 0, 1, -589827, 0, 196611, -655360, 0, 196609, -655359, 0, 196611, -655340, 0, 65536, -655336, 0, 65536, -524316, 0, 0, -524309, 0, 65536, -524292, 0, 131072, -589822, 0, 196609, -589821, 0, 196610, -589820, 0, 196611, -589804, 0, 65536, -589800, 0, 65536, -458780, 0, 65536, -458773, 0, 65536, -458757, 0, 196608, -524283, 0, 196608, -524268, 0, 65536, -524264, 0, 65536, -393244, 0, 65536, -393237, 0, 65536, -393223, 0, 196609, -393222, 0, 196611, -458746, 0, 196609, -458745, 0, 196611, -458732, 0, 65536, -458728, 0, 65536, -327708, 0, 65536, -327701, 0, 65536, -327688, 0, 0, -393208, 0, 196609, -393207, 0, 196611, -393196, 0, 65536, -393192, 0, 65536, -262172, 0, 131072, -262165, 0, 131072, -262152, 0, 131072, -327670, 0, 196608, -327660, 0, 65536, -327656, 0, 65536, -196635, 0, 0, -196628, 0, 0, -196617, 0, 0, -262133, 0, 196608, -262124, 0, 131072, -262120, 0, 65536, -131099, 0, 65536, -131092, 0, 65536, -131081, 0, 131072, -196596, 0, 196608, -196589, 0, 0, -196584, 0, 65536, -65563, 0, 65536, -65556, 0, 65536, -65546, 0, 0, -131059, 0, 196608, -131053, 0, 65536, -131048, 0, 65536, -27, 0, 131073, -26, 0, 3, -20, 0, 131072, -10, 0, 131072, -65522, 0, 0, -65517, 0, 131072, -65512, 0, 65536, 65510, 0, 65536, 65517, 0, 0, 65525, 0, 0, 14, 0, 65536, 18, 0, 0, 24, 0, 65536, 131046, 0, 65536, 131053, 0, 65536, 131061, 0, 65536, 65550, 0, 131072, 65554, 0, 65536, 65560, 0, 65536, 196582, 0, 65536, 196589, 0, 65536, 196597, 0, 65536, 131087, 0, 0, 131090, 0, 131072, 131096, 0, 131072, 262118, 0, 131072, 262125, 0, 131072, 262133, 0, 65536, 196623, 0, 65536, 196625, 0, 0, 196631, 0, 0, 327653, 0, 0, 327662, 0, 0, 327669, 0, 65536, 262159, 0, 65536, 262161, 0, 65536, 262167, 0, 65536, 393189, 0, 65536, 393198, 0, 131072, 393205, 0, 65536, 327695, 0, 131072, 327697, 0, 131072, 327703, 0, 65536, 458725, 0, 131072, 458735, 0, 0, 458741, 0, 65536, 393230, 0, 0, 393232, 0, 0, 393239, 0, 65536, 524262, 0, 0, 524271, 0, 131072, 524277, 0, 65536, 458766, 0, 131072, 458768, 0, 65536, 458775, 0, 65536, 589798, 0, 65536, 589808, 0, 0, 589813, 0, 131072, 524301, 0, 0, 524304, 0, 65536, 524311, 0, 65536, 655334, 0, 131072, 655344, 0, 131072, 655350, 0, 196608, 589837, 0, 131072, 589840, 0, 65536, 589847, 0, 65536, 720871, 0, 0, 720881, 0, 0, 720887, 0, 196608, 655372, 0, 196608, 655376, 0, 65536, 655383, 0, 65536, 786407, 0, 131072, 786417, 0, 131072, 786424, 0, 196609, 786425, 0, 196611, 720906, 0, 196609, 720907, 0, 196611, 720912, 0, 131072, 720919, 0, 65536, 851944, 0, 0, 851954, 0, 196608, 851962, 0, 196609, 851963, 0, 196610, 851964, 0, 196610, 851965, 0, 196611, 786440, 0, 196609, 786441, 0, 196611, 786447, 0, 0, 786455, 0, 65536, 917480, 0, 131072, 917491, 0, 196608, 917502, 0, 196609, 917503, 0, 196610, 851968, 0, 196611, 851974, 0, 196609, 851975, 0, 196611, 851983, 0, 131072, 851991, 0, 65536, 983017, 0, 0, 983028, 0, 196608, 983032, 0, 0, 917505, 0, 196609, 917506, 0, 196610, 917507, 0, 196610, 917508, 0, 196610, 917509, 0, 196611, 917518, 0, 0, 917527, 0, 65536, 1048553, 0, 131072, 1048565, 0, 196608, 1048568, 0, 131073, 1048569, 0, 196611, 983054, 0, 65536, 983063, 0, 65536, 1114090, 0, 0, 1114102, 0, 196608, 1114106, 0, 196608, 1048590, 0, 131072, 1048599, 0, 65536, 1179626, 0, 131072, 1179639, 0, 196608, 1179643, 0, 196609, 1179644, 0, 196610, 1179645, 0, 196611, 1114125, 0, 0, 1114135, 0, 65536, 1245163, 0, 196608, 1245176, 0, 196609, 1245177, 0, 196610, 1245178, 0, 196611, 1245182, 0, 196609, 1245183, 0, 196611, 1179661, 0, 131072, 1179671, 0, 131072, 1310700, 0, 0, 1245184, 0, 196608, 1245196, 0, 196608, 1245206, 0, 0, 1376236, 0, 131072, 1310721, 0, 196609, 1310722, 0, 196611, 1310731, 0, 0, 1310742, 0, 65536, 1441773, 0, 0, 1376259, 0, 196609, 1376260, 0, 196611, 1376267, 0, 131072, 1376278, 0, 131072, 1507309, 0, 131072, 1441797, 0, 196609, 1441798, 0, 196610, 1441799, 0, 196611, 1441801, 0, 196609, 1441802, 0, 196611, 1441813, 0, 0, 1572846, 0, 0, 1507336, 0, 196608, 1507349, 0, 131072, 1638382, 0, 131072, 1572884, 0, 0, 1703919, 0, 0, 1638420, 0, 131072, 1769455, 0, 131072, 1703955, 0, 0, 1834992, 0, 196608, 1769491, 0, 131072, 1900529, 0, 196608, 1835026, 0, 0, 1966066, 0, 196608, 1900562, 0, 131072, 2031603, 0, 196608, 1966097, 0, 196608, 2097140, 0, 196608, 2031632, 0, 196608, 2162677, 0, 196608, 2097167, 0, 196608, 2228214, 0, 196608, 2162702, 0, 196608, 2293751, 0, 196608, 2228237, 0, 196608, 2359288, 0, 196608, 2293772, 0, 196608, 2424825, 0, 196609, 2424826, 0, 196611, 2359307, 0, 196608, 2490363, 0, 196609, 2490364, 0, 196611, 2424841, 0, 196609, 2424842, 0, 196611, 2555901, 0, 196609, 2555902, 0, 196611, 2490376, 0, 196608, 2621439, 0, 196609, 2555904, 0, 196610, 2555905, 0, 196611, 2555910, 0, 196609, 2555911, 0, 196611, 2621442, 0, 196609, 2621443, 0, 196610, 2621444, 0, 196610, 2621445, 0, 196611 )

[node name="PlayerStart" type="Position2D" parent="."]
position = Vector2( 88, -48 )

[node name="PlayerSpawnTimer" type="Timer" parent="."]
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[connection signal="timeout" from="PlayerSpawnTimer" to="." method="_on_PlayerSpawnTimer_timeout"]
